--- a/src/components/shared/button/button.scss
+++ b/src/components/shared/button/button.scss
@@ -10,7 +10,7 @@
   padding: 0 2rem;
   border-radius: 6px;
   cursor: pointer;
-  height: $Field-height;
+  height: $Button-height;
   text-decoration: none;
 
   &:focus {
