--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -1,4 +1,5 @@
 @import '~css/bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
 
 .SG-bodyText {
   @extend %SG-bodyText;
