--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -97,7 +97,7 @@ $gray-800: #343434 !default;
 $gray-900: #242424 !default;
 $black: #000 !default;
 
-$blue: #5d8fc2 !default;
+$blue: #91C7DD !default;
 $red: #dd5826 !default;
 $yellow: #f0b518 !default;
 $green: #64bd63 !default;
@@ -151,7 +151,7 @@ $sidebar-bg-color: #242424;
 $sidebar-color: #aaa;
 
 $sidebar-item-border-color: #2d2d2d;
-$sidebar-item-active-color: #f2be35;
+$sidebar-item-active-color: #91C7DD;
 $sidebar-item-hover-bg-color: #111;
 
 $chat-sidebar-bg-color: $gray-900 !default;
