[O1-7] added upcoming opportunities to dashboard (WIP)

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -33,6 +33,7 @@
     @include content(t);
     height: 100%;
     padding-top: 0 !important;
+    padding-left: 5rem;
   }
 /* START HERE */
   &-alert {
