[O1-6] styled campaign stats component

--- a/src/components/widget/Widget.scss
+++ b/src/components/widget/Widget.scss
@@ -74,4 +74,13 @@
             }
         }
     }
+
+    &-full {
+        display: block;
+        width: 100%;
+    }
+    &-half {
+        display: inline-block;
+        width: 50%;
+    }
 }
