--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -26,12 +26,13 @@ $Color-alto: #F2F2F2;
 $Color-black: #595959;
 $Color-brightTurquoise: #0DCAF2;
 $Color-catskillWhite: #DDEAF1;
-$Color-catskillBlue: #9AC1D5;
+$Color-catskillBlue: #91C7DD;
 $Color-darkCatskillBlue: #C4DBE7;
 $Color-curiousBlue: #2595E4;
 $Color-denim: #555555;
 $Color-darkDenim: #4C4C4C;
 $Color-dodgerBlue: #31AAF5;
+$Color-dustyGray: #999999;
 $Color-gallery: #EFEFEF;
 $Color-gray: #EEE;
 $Color-silver: #BFBFBF;
