[O1-8] added campaign news to dashboard

--- a/src/components/statistics/Statistics.scss
+++ b/src/components/statistics/Statistics.scss
@@ -28,7 +28,8 @@
         }
         td {
             text-align: center;
-            font-size: $font-size-larger * 2;
+            font-size: $font-size-larger * 3;
+            font-weight: bold;
         }
     }
 }
