[O1-28] added account title to dashboard

--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -76,6 +76,7 @@ $fa-font-path: '../fonts/font-awesome' !default;
 $font-size-initial:       13px; // reset default browser value from 16px to 13px
 $font-size-base:          1rem !default;
 $font-size-lg:            1.25rem !default;
+$font-size-xl:            2.2rem !default;
 $font-size-sm:            0.875rem !default;
 $font-size-larger:        1.1rem;
 $font-size-mini:          0.9rem;
