--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -23,6 +23,16 @@
         }
     }
 
+    &-account {
+        &--title {
+            margin-top: 0;
+            font-size: $font-size-xl;
+            color: $widget-title-color;
+            font-weight: bold;
+            @include clearfix();
+        }
+    }
+
     &-add {
         padding-left: 4rem;
         padding-right: 4rem;
