[O1-31] cleaned up partner detail page

--- a/src/components/field/types/Checkbox/Checkbox.scss
+++ b/src/components/field/types/Checkbox/Checkbox.scss
@@ -44,10 +44,10 @@
 
   &-check {
     @include center();
-    width: 50%;
+    width: 16px;
     height: 50%;
     margin-right: 1rem;
-    fill: $Color-white;
+    fill: $Color-black;
   }
 
   &-option:not(&-option--disabled):hover &-icon {
