[O1-32] leave opportunity feedback

--- a/src/components/admin/css/admin.scss
+++ b/src/components/admin/css/admin.scss
@@ -16,7 +16,7 @@
     margin-bottom: 1rem;
     font-weight: 200;
     color:#aaa;
-    font-size: 1.2rem;
+    font-size: $Type-fontSize--theta;
 }
 .Button {
     width: 200px;
