--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -5,6 +5,7 @@
   border-collapse: collapse;
   margin: $Margin-rhythm 0 $Margin-rhythm--double;
   border-bottom: 1rem solid $Color-white;
+  font-size: $Type-fontSize--theta;
 
   &-row {
     background: $Color-white;
