[O1-48] added pipeline calculator

--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -51,6 +51,7 @@ $Color-brand--college: #8ec449;
 
 $Margin-rhythm: 2rem;
 $Margin-rhythm--half: $Margin-rhythm / 2;
+$Margin-rhythm--quarter: $Margin-rhythm / 4;
 $Margin-rhythm--double: 2 * $Margin-rhythm;
 
 $BorderRadius-standard: 0.2rem;
