--- a/src/components/admin/css/admin.scss
+++ b/src/components/admin/css/admin.scss
@@ -2,8 +2,10 @@
 @import "../../../css/global";
 
 .Admin-title {
-    margin-bottom: 0;
-    margin-top: 2rem;
+    margin-bottom: $Margin-rhythm--double;
+    margin-top: $Margin-rhythm;
+    font-size: $Type-fontSize--zeta;
+    font-weight: $font-weight-semi-bold;
 }
 .Admin-title--normal {
     font-weight: 200;
