--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -30,6 +30,7 @@
             color: $widget-title-color;
             font-weight: bold;
             @include clearfix();
+            margin-left: 1.75rem;
         }
     }
 
