--- a/src/components/modals/modal_mount/ModalMount.scss
+++ b/src/components/modals/modal_mount/ModalMount.scss
@@ -8,13 +8,13 @@
     height: 100%;
     background: rgba(0, 0, 0, .8);
     z-index: 2;
-    border-top: $Header-height solid transparent;
+    border-top: 5rem solid transparent;
 }
 
 .ModalMount-content {
     position: absolute;
     display: inline-block;
-    width: auto;
+    width: 50%;
     height: auto;
     max-width: 100%;
     max-height: 100%;
