--- a/src/components/widget/Widget.scss
+++ b/src/components/widget/Widget.scss
@@ -83,4 +83,8 @@
         display: inline-grid;
         width: 50%;
     }
+    &-actions {
+        text-align: right;
+        margin-right: 3rem;
+    }
 }
