[O1-133] WIP: search on Admin Users

--- a/src/components/widget/Widget.scss
+++ b/src/components/widget/Widget.scss
@@ -87,4 +87,10 @@
         text-align: right;
         margin-right: 3rem;
     }
+    &-button {
+        &--right {
+            margin-right: 0;
+            margin-left: auto;
+        }
+    }
 }
